test/compile_errors/err_let_else_missing_else_for_refutable.w
//! expect-error: let ... else requires an else branch for refutable patterns

fn main:
    let pair = (Some(1), 2)
    let (Some(v), n) = pair
    let _x = v + n
